--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,16 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="white_one">#FAFFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="main_back_top">#65d7ff</color>
+    <color name="main_back_one">#afeaff</color>
+    <color name="blue3">#8bafeaff</color>
+
+    <color name="blue_1">#f3faff</color>
+    <color name="blue_2">#d3e6e5</color>
+    <color name="grey_3">#dad8d8</color>
+    <color name="grey_1">#dfdfdf</color>#dad8d8
+    <color name="grey_2">#cfcfcf</color>
 </resources>
