--- a/app/src/main/res/layout/mapfind_layout.xml
+++ b/app/src/main/res/layout/mapfind_layout.xml
@@ -215,11 +215,36 @@
         </LinearLayout>
 
     </LinearLayout>
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/bmapView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="5dp"
-        android:clickable="true" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/bmapView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="5dp"
+            android:clickable="true"
+            android:layout_weight="1"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="@color/grey_1"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="基站查询数据显示:"
+            android:textColor="@color/black"
+            android:textSize="@dimen/size_18sp"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="8dp"/>
+        <ListView
+            android:id="@+id/cell_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:layout_marginLeft="8dp"/>
+    </LinearLayout>
 
 </LinearLayout>
