--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,7 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
         <Button
-            android:id="@+id/login_"
+            android:id="@+id/login_find_bts_btn"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:text="基站查询"
