--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,28 +21,29 @@
 
         <TextView
             android:id="@+id/main_dev_con_state"
-            android:layout_toRightOf="@id/logo_imageview"
             android:layout_width="wrap_content"
             android:text="设备：未连接"
             android:gravity="center|left"
             android:textSize="@dimen/text_size_16"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/logo_imageview" />
         <Button
-            android:id="@+id/main_data_save_file_btn"
-            android:layout_toRightOf="@id/main_dev_con_state"
+            android:id="@+id/main_start_task_btn"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:text="开始任务"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
         <Button
-            android:id="@+id/main_query_btn"
-            android:layout_toRightOf="@id/main_data_save_file_btn"
+            android:id="@+id/main_show_map_btn"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:text="显示地图"
-            android:layout_height="match_parent" />
-
-
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/main_start_task_btn" />
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/data_show_liner"
@@ -697,15 +698,27 @@
 
 
     </LinearLayout>
-
-
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/bmapView"
+    <RelativeLayout
+        android:id="@+id/main_map_rela"
         android:layout_below="@id/main_top_rela"
-        android:layout_width="match_parent"
         android:layout_marginBottom="50dp"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:clickable="true" />
+        >
+        <Spinner
+            android:id="@+id/spinner_marker_type"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_width="100dp"
+            android:layout_height="50dp"></Spinner>
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/bmapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true" />
+    </RelativeLayout>
+
+
 
     <LinearLayout
         android:id="@+id/main_buttom"
@@ -718,14 +731,5 @@
             android:layout_weight="1"
             android:text="基站查询"
             android:layout_height="match_parent" />
-        <Button
-            android:id="@+id/main_upload_btn"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:text="文件上传"
-            android:layout_height="match_parent" />
-
-
-
     </LinearLayout>
 </RelativeLayout>
