--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -368,8 +368,7 @@
                 android:layout_width="0dp"
                 android:layout_height="fill_parent" />
             <TextView
-                android:layout_width="0.5dip"
-                android:layout_weight="0"
+                android:layout_width="wrap_content"
                 android:background="@color/grey_3"
                 android:layout_height="fill_parent" />
             <TextView
@@ -705,26 +704,34 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         >
-        <Spinner
-            android:id="@+id/spinner_marker_type"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:layout_width="100dp"
-            android:layout_height="50dp"></Spinner>
         <com.baidu.mapapi.map.MapView
             android:id="@+id/bmapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true" />
+        <LinearLayout
+            android:layout_alignParentRight="true"
+            android:background="@color/white"
+            android:layout_marginTop="10dp"
+            android:layout_width="150dp"
+            android:layout_height="40dp">
+            <Spinner
+                android:id="@+id/spinner_marker_type"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></Spinner>
+        </LinearLayout>
+
     </RelativeLayout>
-
-
-
     <LinearLayout
         android:id="@+id/main_buttom"
         android:layout_alignParentBottom="true"
         android:layout_width="fill_parent" android:layout_height="50dp"         android:layout_weight="1"
         android:background="@color/blue3">
+        <TextView
+            android:id="@+id/tv_show_position"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="match_parent" />
         <Button
             android:id="@+id/main_find_bts_btn"
             android:layout_width="0dp"
