--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,8 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:text="基站查询"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
         <Button
             android:id="@+id/login_offlinemap_btn"
             android:layout_width="0dp"
@@ -91,6 +92,12 @@
             android:layout_weight="1"
             android:text="文件上传"
             android:layout_height="match_parent" />
-
+        <Button
+            android:id="@+id/main_config_btn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            android:text="配置"
+            android:layout_height="match_parent" />
     </LinearLayout>
 </RelativeLayout>
