--- a/app/src/main/res/layout/mapfind_layout.xml
+++ b/app/src/main/res/layout/mapfind_layout.xml
@@ -220,7 +220,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <com.baidu.mapapi.map.MapView
-            android:id="@+id/bmapView"
+            android:id="@+id/find_bmapView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginTop="5dp"
