--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,6 @@
         <Button
             android:id="@+id/main_find_bts_btn"
             android:layout_width="wrap_content"
-
             android:text="基站查询"
             android:layout_toRightOf="@id/main_show_map_btn"
             android:layout_height="match_parent" />
@@ -375,7 +374,8 @@
                 android:layout_width="0dp"
                 android:layout_height="fill_parent" />
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0.5dip"
+                android:layout_weight="0"
                 android:background="@color/grey_3"
                 android:layout_height="fill_parent" />
             <TextView
@@ -666,20 +666,17 @@
                 android:textSize="@dimen/text_size_16"
                 android:textColor="@color/black"
                 android:layout_width="0dp"
-                android:layout_height="fill_parent"></RadioButton>
+                android:layout_height="fill_parent">
+            </RadioButton>
         </RadioGroup>
         <TextView
             android:layout_width="match_parent"
             android:layout_weight="0"
             android:background="@color/grey_3"
             android:layout_height="1dp" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_weight="0"
-            android:background="@color/grey_3"
-            android:layout_height="1dp" />
         <LinearLayout
-            android:layout_width="fill_parent" android:layout_height="0dp"         android:layout_weight="1"
+            android:layout_width="fill_parent" android:layout_height="0dp"
+            android:layout_weight="1"
             android:background="@color/white">
             <CheckBox
                 android:id="@+id/main_checkbox_ci"
@@ -701,13 +698,10 @@
             android:layout_weight="0"
             android:background="@color/grey_3"
             android:layout_height="1dp" />
-
-
     </LinearLayout>
     <RelativeLayout
         android:id="@+id/main_map_rela"
         android:layout_below="@id/main_top_rela"
-
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         >
@@ -715,6 +709,8 @@
             android:id="@+id/bmapView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:clickable="true" />
         <LinearLayout
             android:layout_alignParentRight="true"
