--- a/app/src/main/res/layout/activity_file_import.xml
+++ b/app/src/main/res/layout/activity_file_import.xml
@@ -32,6 +32,7 @@
                 android:layout_marginRight="40dp"
                 android:layout_height="40dp"
                 android:text="导入"
+                android:background="@drawable/btn_style"
                 android:textSize="@dimen/text_size_16" />
             />
         </RelativeLayout>
