--- a/app/src/main/res/layout/config_dialog.xml
+++ b/app/src/main/res/layout/config_dialog.xml
@@ -25,6 +25,21 @@
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 />
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:text="端口号" />
+            <EditText
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:id="@+id/port"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                />
         </LinearLayout>
 
         <LinearLayout
