--- a/app/src/main/res/layout/file_name_item.xml
+++ b/app/src/main/res/layout/file_name_item.xml
@@ -6,6 +6,7 @@
         android:id="@+id/tv_name_item"
         android:layout_width="match_parent"
         android:textSize="@dimen/size_20sp"
+        android:layout_marginLeft="20dp"
         android:gravity="center|left"
         android:layout_height="50dp" />
 </LinearLayout>
